Simplified the infra

--- a/docker/apache/vhosts/sf.conf
+++ b/docker/apache/vhosts/sf.conf
@@ -1,18 +1,6 @@
-Define host_name real-estate-index
+Define host_name xabir
 
 <VirtualHost *:80>
-    ServerName ${host_name}
-
-    RewriteEngine on
-    RewriteCond %{SERVER_PORT} !^443$
-    RewriteRule ^/(.*) https://%{HTTP_HOST}/$1 [NC,R=301,L]
-
-    ErrorLog /var/log/apache2/app.error
-    CustomLog /var/log/apache2/app.log combined
-</VirtualHost>
-
-
-<VirtualHost *:443>
     ServerName ${host_name}
 
     DocumentRoot /var/www/app/public
@@ -60,8 +48,4 @@ Define host_name real-estate-index
     ErrorLog /var/log/apache2/app.error
     CustomLog /var/log/apache2/app.log combined
 
-    SSLEngine on
-    SSLProtocol all -SSLv2 -SSLv3
-    SSLCertificateFile /etc/apache2/ssl/app/cert.crt
-    SSLCertificateKeyFile /etc/apache2/ssl/app/cert.key
 </VirtualHost>
